# ckb-script-fuzzing-toolkit

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  build_single_header.sh
.github/workflows/: rust.yml
amalgamated/: README.md  fuzzing_syscalls_all_in_one.h  index.h
crates/ckb-c-to-std-syscalls/: Cargo.toml
crates/ckb-c-to-std-syscalls/src/: lib.rs
crates/ckb-vm-fuzzing-utils/: Cargo.toml
crates/ckb-vm-fuzzing-utils/src/: lib.rs
crates/ckb-vm-honggfuzz-runner/: Cargo.toml
crates/ckb-vm-syscall-tracer/: Cargo.toml  build.rs
crates/ckb-vm-syscall-tracer/protos/: traces.proto
crates/ckb-vm-syscall-tracer/src/: lib.rs  reader.rs  readonly_machines.rs  tracer.rs
crates/fdp-ckb-syscalls/: Cargo.toml  build.rs  c.cc  fuzzing_syscalls_all_in_one.h
crates/fdp-ckb-syscalls/src/: lib.rs
crates/protobuf-ckb-syscalls/: Cargo.toml  build.rs  traces.proto
crates/protobuf-ckb-syscalls/src/: lib.rs
crates/syscall-defs/: Cargo.toml
crates/syscall-defs/src/: lib.rs  types.rs
crates/syscall-defs/src/ckb_std/: mod.rs  stub.rs  trait_wrapper.rs
docker/: Dockerfile
include/: fuzzing_syscalls.h
mock_syscalls/: aflxx_interface.cc  binary_to_text_converter.cc  file_interface.cc  fuzzing_syscalls.cc  fuzzing_syscalls.h  fuzzing_syscalls_all_in_one.h  fuzzing_syscalls_internal.h  libfuzzer_interface.cc  traces.pb.cc  traces.pb.h  traces.proto
src/interfaces/: aflxx.cc  file.cc  libfuzzer.cc
src/syscalls/: FuzzedDataProvider.h  argv_builder.h  fuzzed_data_provider.cc  protobuf.cc  protobuf.h  utils.h
src/tools/: binary_to_text_converter.cc
test/: test.cc
tools/flattener/: Cargo.toml
tools/flattener/src/: main.rs
