[workspace]
resolver = "2"
members = [
  "crates/ckb-vm-fuzzing-utils",
  "crates/ckb-vm-syscall-tracer",
  "crates/fdp-ckb-syscalls",
  "crates/protobuf-ckb-syscalls",
  "tools/flattener"
]

[workspace.dependencies]
ckb-chain-spec = "0.202.0"
ckb-script = "0.202.0"
ckb-traits = "0.202.0"
ckb-types = "0.202.0"
ckb-mock-tx-types = "0.202.0"
ckb-vm = "=0.24.14"

clap = { version = "4.5.35", features = ["cargo", "derive"] }
fork = "0.2.0"
hex = "0.4"
int-enum = "1.1.2"
prost = "0.13.5"
prost-build = "0.13.5"
regex = { version = "1.11.1", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[workspace.dependencies.ckb-std]
git = "https://github.com/xxuejie/ckb-std"
rev = "96927e4"
features = ["stub-syscalls"]

[workspace.dependencies.spin]
version = "0.10.0"
default-features = false
features = ["spin_mutex"]
