[package]
name = "protobuf-ckb-syscalls"
version = "0.1.0"
edition = "2024"

[dependencies]
ckb-vm-fuzzing-utils = { path = "../ckb-vm-fuzzing-utils" }
ckb-std.workspace = true

once_cell.workspace = true
prost.workspace = true
prost-reflect.workspace = true
spin.workspace = true

[build-dependencies]
prost-build.workspace = true
prost-reflect-build.workspace = true

[features]
default = ["std", "stub-c-syscalls"]
std = []
stub-c-syscalls = ["ckb-std/stub-c-syscalls"]
text-format = []
print-debug-messages = ["std"]
